offline event handler and server fix
